deployments/manual-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: interview-app
  namespace: default
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: interview-app
  template:
    metadata:
      labels:
        app: interview-app
    spec:
      containers:
        - name: interview-app
          image: donnyvan/interview-app:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          resources:  # cpu resources
            requests:
              memory: "512Mi"  
              cpu: "250m"      
            limits:
              memory: "1Gi"    
              cpu: "1"         
---
apiVersion: v1
kind: Service
metadata:
  name: interview-app-service
  namespace: default
spec:
  selector:
    app: interview-app
  ports:
    - name: http
      port: 80
      targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: interview-app-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: interview-app-service
              port:
                number: 80
